# hw4_dl

./: main.py  pyproject.toml  task4.md  task_1.py  task_2.py  task_3.py
data/: loan_test.csv  loan_train.csv
results/: task_1.txt  task_2.txt  task_3.txt
